@@ -1,3 +1,11 @@
+2011-09-24 Stefan Bidigaray <stefanbidi@gmail.com>
+
+	* Source/NSCFType.h:
+	* Source/NSCFType.m: Delete NSCFType.h and move interface definition to
+	NSCFType.m.
+	* Source/NSCFData.m: Added Objective-C interface to CFData.
+	* Source/Data.c: Check deallocator before setting it.
+
 2011-09-23 Stefan Bidigaray <stefanbidi@gmail.com>
 
 	* Source/CFString.c: Do not require the use of libicuio.
